--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -9,7 +9,10 @@
   %li
     Released on:
     = @movie.release_date.strftime("%B %d, %Y")
-
+  %li
+    Director:
+    = @movie.director
+    
 %h3 Description:
 
 %p#description= @movie.description
